# doip-server

./: .gitignore  AnsiColors_8h.html  AnsiColors_8h__dep__incl.map  AnsiColors_8h__dep__incl.md5  AnsiColors_8h_source.html  ByteArray_8h.html  ByteArray_8h__dep__incl.map  ByteArray_8h__dep__incl.md5  ByteArray_8h_source.html  CMakeLists.txt  CanIsoTpProvider_8h.html  CanIsoTpProvider_8h__incl.map  CanIsoTpProvider_8h__incl.md5  CanIsoTpProvider_8h_source.html  Code Review.md  Daemonize_8cpp.html  Daemonize_8cpp.js  Daemonize_8cpp__incl.map  Daemonize_8cpp__incl.md5  Daemonize_8cpp_source.html  Daemonize_8h.html  Daemonize_8h.js  Daemonize_8h__dep__incl.map  Daemonize_8h__dep__incl.md5  Daemonize_8h_source.html  DoIPAddress_8h.html  DoIPAddress_8h.js  DoIPAddress_8h__dep__incl.map  DoIPAddress_8h__dep__incl.md5  DoIPAddress_8h_source.html  DoIPClient_8cpp.html  DoIPClient_8cpp__incl.map  DoIPClient_8cpp__incl.md5  DoIPClient_8cpp_source.html  DoIPClient_8h.html  DoIPClient_8h__incl.map  DoIPClient_8h__incl.md5  DoIPClient_8h_source.html  DoIPCloseReason_8h.html  DoIPCloseReason_8h__dep__incl.map  (+608 more)
.github/: copilot-instructions.md
.github/workflows/: badge.yml  ci.yml  release.yml
cmake/: projectSettings.cmake
doc/: DoIPServer.md  Logging.md  ToDo-Transport.md  Transport.md
doc/internal/: ToDo-Transport.md  damonize.md
doc/internal/logging/: Logger_enhanced.h  daemon_utils.cpp  daemon_utils.h  logger_daemon_complete_guide.md  main_complete_example.cpp
examples/: CMakeLists.txt
examples/client/: ReadMe.md  change-vin-and-reset.py
examples/discover/: CMakeLists.txt  ExampleDoIPServerModel.h  SimpleServer.cpp  test-local-client.py
examples/socket-can/: CMakeLists.txt  CanIsoTpServerModel.h  DoIPCanIsoTpServer.cpp
inc/: DoIPAddress.h  DoIPClient.h  DoIPConnection.h  DoIPDefaultConnection.h  DoIPDownstreamServerModel.h  DoIPIdentifiers.h  DoIPMessage.h  DoIPServer.h  DoIPServerModel.h  IConnectionContext.h  IConnectionTransport.h  IDownstreamProvider.h  IServerTransport.h  ITransport.h  Logger.h  MockConnectionTransport.h  MockServerTransport.h  MockTransport.h  Socket.h  TcpConnectionTransport.h  TcpServerTransport.h  TcpTransport.h  ThreadSafeQueue.h  TimerManager.h
inc/can/: CanIsoTpProvider.h
inc/cli/: ServerConfigCLI.h
inc/tp/: IServerTransport.h  MockConnectionTransport.h  MockServerTransport.h  MockTransport.h  TcpConnectionTransport.h  TcpServerTransport.h  TcpTransport.h
inc/uds/: UdsMockProvider.h
inc/util/: Daemonize.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  (+88 more)
src/: DoIPClient.cpp  DoIPConnection.cpp  DoIPDefaultConnection.cpp  DoIPServer.cpp  Logger.cpp  MockConnectionTransport.cpp  MockServerTransport.cpp  MockTransport.cpp  TcpConnectionTransport.cpp  TcpServerTransport.cpp  TcpTransport.cpp
src/tp/: MockConnectionTransport.cpp  MockServerTransport.cpp  MockTransport.cpp  TcpConnectionTransport.cpp  TcpServerTransport.cpp  TcpTransport.cpp
src/util/: Daemonize.cpp
test/: CMakeLists.txt  Misc_Test.cpp
test/integration/: CMakeLists.txt
test/integration/discover/: CMakeLists.txt  Discover_Client.cpp  Discover_Server.cpp  ExampleDoIPServerModel.h  test-local-client.py
test/unit/: ByteArray_Test.cpp  CMakeLists.txt  DoIPDefaultConnection_Test.cpp  MacAddress_Test.cpp  Misc_Test.cpp  MockTransport_Test.cpp  TimerManager_Test.cpp
test/unit/cli/: ServerConfigCLI_Test.cpp
